# sdl2-grid

./: CMakeLists.txt  LICENSE  README.md  compile_commands.json  run.sh
.cache/clangd/index/: app.cc.003CBCF07492E7F1.idx  app.hh.C4AAA27553020419.idx  defs.cc.479550CAA3844ED5.idx  defs.hh.BC536A0223D262C9.idx  entity.cc.C90F93FC743EFFA2.idx  entity.hh.933D640168995884.idx  game.cc.42AE4CAB85705037.idx  game.hh.F65580B91AE8A30E.idx  main.cc.021BC7D5024038B5.idx  scene.cc.F104EF912385D574.idx  scene.hh.48F82F31B357E0E3.idx  scene_manager.cc.4BF5DA11BEEC2262.idx  scene_manager.hh.1C2C931AB85CB1BD.idx  ui.cc.D37F25701477C78C.idx  ui.hh.0E243E0D55B2B44D.idx  world.cc.44D7962FF148B22E.idx  world.hh.817DBD627C1ABA62.idx
src/: app.cc  app.hh  color.cc  color.hh  defs.cc  defs.hh  entity.cc  entity.hh  font.cc  font.hh  main.cc  scene.cc  scene.hh  scene_manager.cc  scene_manager.hh  ui.cc  ui.hh  world.cc  world.hh
src/pathfinder/: astar.cc  astar.hh  bfs.cc  bfs.hh  dfs.cc  dfs.hh  world.cc  world.hh
src/pathfinders/: astar.cc  astar.hh  bfs.cc  bfs.hh  defs.cc  defs.hh  dfs.cc  dfs.hh  pathfinder_shared.hh
src/scenes/: boilerplate.cc  boilerplate.hh  game.cc  game.hh  main_menu.cc  main_menu.hh  pause.hh  settings.cc  settings.hh  test.cc  test.hh  ui_test.cc  ui_test.hh
src/ui/: all.hh  button.cc  button.hh  spinner.cc  spinner.hh  text.cc  text.hh  widget.cc  widget.hh  widget_manager.cc  widget_manager.hh
